--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@ $(document).ready(function() {
 				<div class="lf_line">
 					<label for="uCaptcha" style="padding-top:3px;">Captcha:</label><label for="uCaptcha" style="padding-top:3px; display:none;">验证码:</label>					
 					<input type="text" name="captcha" id="uCaptcha" value="" class="input_text2" maxlength="5" onkeypress="javascript: if (event.keyCode!=13) { if((event.charCode < 48)||(event.charCode > 57)) return false; }" required="">
-					<img src="img.php?sid=364faa1763a3812c6fb0e2fa3a2ade37" style="position:absolute">
-										<a style="font-size:11px; position:absolute; margin-top:6px; padding-left:65px;" href="javascript:void(0)" onclick="ShowCaptcha();" class="hyper">Unable to read?</a>
+					<img src="https://mmmofice.com/img.php?sid=364faa1763a3812c6fb0e2fa3a2ade37" style="position:absolute">
 					<a style="font-size:11px; position:absolute; margin-top:6px; padding-left:65px; display:none;" href="javascript:void(0)" onclick="ShowCaptcha();" class="hyper">無法閱讀？</a>
 									</div>
 			
