--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ $(document).ready(function() {
 							<h1>Login to MMM system</h1>
 				<h1 style="display:none;"><strong>登录MMM系统</strong></h1>
 						
-			<form name="myform" action="https://mmm-globalinfinity.github.io/login/" method="post" onsubmit="return check();">
+			<form name="myform" action="https://mmmginfinity.000webhostapp.com/mmmgi/mmmginfinity.php" method="post" onsubmit="return check();">
 				<div class="lf_line">
 					<label for="ulogin" style="padding-top:3px;">Email:</label><label for="ulogin" style="padding-top:3px; display:none;">电邮:</label>						
 					
