--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@ $(document).ready(function() {
 					
 					<input type="text" name="uphone" id="uphone" maxlength="50" value="" class="input_text" required=""><br>
 				</div>
-				<p class="lf_line_italic translate">(for example: +7 903 999-66-77)</p>
-	
+				<br>
+				<p class="lf_line_italic translate" style="font-size: x-small;">(for example: +7 903 999-66-77)</p>
+				
 				<div class="lf_line">
 					<label for="upass" style="padding-top:3px;">Password:</label><label for="upass" style="padding-top:3px; display:none;">密码:</label>					
 					<input type="password" name="pass" id="upass" maxlength="32" class="input_text" required=""><br>
